# KeyStack

./: Cargo.toml  README.md
crates/keystack-core/: Cargo.toml
crates/keystack-core/src/: lib.rs
crates/keystack-core/src/backend/: hashmap_backend.rs  mod.rs
crates/keystack-core/src/context_provider/: mod.rs  wasm_context_provider.rs
crates/keystack-core/src/crypto_provider/: libcrux_ed25519.rs  mod.rs
crates/keystack-core/src/id_manager/: disabled_id_manager.rs  mod.rs
crates/keystack-core/src/id_provider/: disabled_id_provider.rs  mod.rs
crates/keystack-core/src/plugin/: mod.rs  wasm_pre_action_plugin.rs
crates/keystack-core/src/processor/: mod.rs  wasm_pre_processor.rs
crates/keystack-core/src/provider/: libcrux_ed25519.rs  mod.rs
crates/keystack-core/src/secret_provider/: hashmap_secret_provider.rs  mod.rs
crates/keystack-core/src/user/: mod.rs
crates/keystack-wasm-guest/: Cargo.toml
crates/keystack-wasm-guest-macros/: Cargo.toml
crates/keystack-wasm-guest-macros/src/: lib.rs
crates/keystack-wasm-guest/src/: lib.rs
examples/simple-context-provider/: Cargo.toml  README.md
examples/wasm-context-provider/: Cargo.toml
examples/wasm-context-provider/src/: lib.rs
