[package]
name = "keystack-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
getrandom = "0.4.1"
keystack-wasm-guest = { version = "0.1.0", path = "../keystack-wasm-guest" }
libcrux-ed25519 = "0.0.6"
snafu = "0.8.9"
wasmtime = "42.0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
